--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -109,6 +109,8 @@ float noise(vec2 x) {
 float fbm(vec2 p) {
 	const mat2 m2 = mat2(0.8, -0.6, 0.6, 0.8);
 
+	p.xy += time;
+
 	float f = 0.5000 * noise(p); p = m2 * p * 2.02;
 	f += 0.2500 * noise(p); p = m2 * p * 2.03;
 	f += 0.1250 * noise(p); p = m2 * p * 2.01;
