--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -145,6 +145,14 @@ float opRep( float p, float interval ) {
 	return mod( p, interval ) - 0.5 * interval;
 }
 
+vec2 opRepLimit(vec2 p, float interval, float limit) {
+	if (abs(p.x) < limit && abs(p.y) < limit) {
+		return mod(p, interval) - 0.5 * interval;
+	} else {
+		return p - 0.5 * interval;
+	}
+}
+
 // https://www.shadertoy.com/view/Mlf3Wj
 mat2 rotate(in float a) {
     float s=sin(a),c=cos(a);
@@ -210,7 +218,7 @@ float dWing( in vec3 p ) {
 	p.y += -b + 10.0;
 
 	vec3 p1 = p;
-	p1.xz = opRep( p.xz, 1.0 );
+	p1.xz = opRepLimit(p.xz, 1.0, 20.0);
 
 	vec3 p2 = p;
 	p2 = opRep( p, 0.5 );
@@ -230,7 +238,7 @@ float easeInOutCubic( float t ) {
 	return t < 0.5 ? 4.0 * t * t * t : ( t - 1.0 ) * ( 2.0 * t - 2.0 ) * ( 2.0 * t - 2.0 ) + 1.0;
 }
 
-float dPoll( inout vec3 p ) {
+float dUfo( inout vec3 p ) {
 	float t = time * 0.5;
 	float t1 = floor( t );
 	float t2 = t1 + easeInOutCubic( t - t1 );
@@ -246,7 +254,7 @@ float dPoll( inout vec3 p ) {
 }
 
 float dScene( vec3 p ) {
-	return dPoll( p );
+	return dUfo( p );
 }
 
 
@@ -307,7 +315,7 @@ vec3 calcNormal( vec3 p ) {
 }
 
 void setMaterialAndUv( inout Intersection intersection, vec3 p ) {
-	if ( abs( dPoll( p ) ) < EPS ) {
+	if ( abs( dUfo( p ) ) < EPS ) {
 	}
 	else {
 	}
@@ -348,7 +356,7 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 		intersection.distance += d;
 		p = ray.origin + intersection.distance * ray.direction;
 		intersection.count = i;
-		if ( abs( d ) < EPS || length( p.xz ) >= 20.0 ) break;
+		if (abs(d) < EPS) break;
 	}
 
 	if ( abs( d ) < EPS ) {
