--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -207,7 +207,7 @@ float gauss(float x) {
 	return exp(-x * x / a);
 }
 
-float dWing( in vec3 p ) {
+float dWing(in vec3 p) {
 	float a = 0.07 + 0.07 * tempo;
 
 	float b = min(time, 5.0) * gauss(length(p.xz));
@@ -219,11 +219,11 @@ float dWing( in vec3 p ) {
 	vec3 p2 = p;
 	p2 = opRep( p, 0.5 );
 
-	float d1 = sdBox( p1, vec3( 0.2 + a * 3.0, 12.0 - a,       0.2 + a ) );
-	float d2 = sdBox( p1, vec3( 0.4 - a,       13.0 - 4.0 * a, 0.1 + a ) );
-	float d3 = sdBox( p1, vec3( 0.3 - a,       14.0 - 4.0 * a, a ) );
-	float d4 = sdBox( p2, vec3( 0.05 + a ) );
-	return max( max( min( d1, d2 ), -d3), -d4 );
+	float d =   sdBox(p1, vec3(0.2 + a * 3.0, 12.0 - a, 0.2 + a));
+	d = min(d,  sdBox(p1, vec3(0.4 - a, 13.0 - 4.0 * a, 0.1 + a)));
+	d = max(d, -sdBox(p1, vec3(0.3 - a, 14.0 - 4.0 * a, a)));
+	d = max(d, -sdBox(p2, vec3(0.05 + a)));
+	return d;
 }
 
 float easeInCubic( float t ) {
@@ -241,10 +241,6 @@ float dUfo( inout vec3 p ) {
 
 	p.xz = fold( p.xz, min( t2, 10.0 ) );
 	p.z -= 0.5;
-
-	if ( 10.0 <= time && time < 20.0 ) {
-		//p.x += 0.1 * tempo;
-	}
 
 	return dWing( p );
 }
