--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -316,28 +316,6 @@ void setMaterialAndUv( inout Intersection intersection, vec3 p ) {
 	intersection.uv = p.xz;
 }
 
-//float getShadow( vec3 ro, vec3 rd ) {
-//
-//	float h = 0.0;
-//	float c = 0.0;
-//	float r = 1.0;
-//	float shadowCoef = 0.5;
-//
-//	for ( float t = 0.0; t < 50.0; t++ ) {
-//
-//		h = dScene( ro + rd * c );
-//
-//		if ( h < EPS ) return shadowCoef;
-//
-//		r = min( r, h * 16.0 / c );
-//		c += h;
-//
-//	}
-//
-//	return 1.0 - shadowCoef + r * shadowCoef;
-//
-//}
-
 void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	float d;
 	intersection.distance = 0.0;
@@ -359,15 +337,43 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	}
 }
 
+float calcAo(in vec3 p, in vec3 n){
+	float sca = 1.0, occ = 0.0;
+	for(float i=0.; i<5.; i++){
+		float hr = 0.05 + i * 0.08;
+		float dd = dScene(n * hr + p);
+		occ += (hr - dd) * sca;
+		sca *= 0.5;
+	}
+	return clamp(1.0 - occ, 0.0, 1.0);
+}
+
+float calcShadow(in vec3 p, in vec3 rd) {
+	float d;
+	float distance = OFFSET;
+	float bright = 1.0;
+	float shadowIntensity = 0.5;
+	float shadowSharpness = 16.0;
+
+	for (int i = 0; i < 30; i++) {
+		d = dScene(p + rd * distance);
+		if (d < EPS) return shadowIntensity;
+		bright = min(bright, shadowSharpness * d / distance);
+		distance += d;
+	}
+
+	return shadowIntensity + (1.0 - shadowIntensity) * bright;
+}
+
 void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) {
 	intersection.hit = false;
 	intersectScene( intersection, ray );
 
 	if ( intersection.hit ) {
-		float diffuse = clamp( dot( lightDir, intersection.normal ), 0.1, 1.0 );
-		float specular = pow( clamp( dot( reflect( lightDir, intersection.normal ), ray.direction ), 0.0, 1.0 ), 10.0 );
-		float ao = 1.0 - 0.01 * float( min( intersection.count, 60.0 ) );
-		//float shadow = getShadow( p + intersection.normal * OFFSET, lightDir );
+		float diffuse = clamp(dot(lightDir, intersection.normal), 0.2, 1.0) * 0.5 + 0.5;
+		float specular = pow(clamp(dot(reflect(lightDir, intersection.normal), ray.direction), 0.0, 1.0), 10.0);
+		float ao = calcAo(intersection.position, intersection.normal);
+		float shadow = calcShadow(intersection.position, lightDir);
 
 		if ( intersection.material == METAL_MATERIAL ) {
 			//intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular - 0.01 * float( intersection.count );
@@ -375,7 +381,8 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			//vec2 dg = circuitPattern( uv );
 			//float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
 			//float pattern = max( dg.x - 1.0, 0.0 );
-			intersection.color = vec3( 0.2 ) + 0.2 * diffuse * ao + specular;
+			//intersection.color = vec3(0.2) + 0.5 * diffuse * ao + 0.1 * specular;
+			intersection.color = vec3(0.7) * diffuse * ao * shadow + 0.1 * specular;
 		}
 
 		intersection.color = mix(intersection.color, 0.8 * vec3(0.7, 0.75, 0.8), min(1.0, pow(0.02 * intersection.distance, 2.0)));
@@ -444,9 +451,9 @@ void main(void) {
 		color += alpha * intersection.color;
 		if ( !intersection.hit || intersection.material != METAL_MATERIAL ) break;
 
-		alpha *= 0.5 * clamp(1.0 - 0.01 * intersection.distance, 0.0, 1.0);
+		alpha *= 0.7 * clamp(1.0 - 0.01 * intersection.distance, 0.0, 1.0);
 		ray.origin = intersection.position + intersection.normal * OFFSET;
-		ray.direction = normalize( reflect( ray.direction, intersection.normal ) );
+		ray.direction = normalize(reflect(ray.direction, intersection.normal));
 	}
 
 	//color += 0.2 * tempo;
