--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -208,7 +208,7 @@ float gauss(float x) {
 }
 
 float dWing(in vec3 p) {
-	float a = 0.07 + 0.07 * tempo;
+	float a = 0.1 + 0.06 * (tempo + 1.0);
 
 	float b = min(time, 5.0) * gauss(length(p.xz));
 	p.y += -b + 10.0;
@@ -217,12 +217,12 @@ float dWing(in vec3 p) {
 	p1.xz = opRepLimit(p.xz, 1.0, 20.0);
 
 	vec3 p2 = p;
-	p2 = opRep( p, 0.5 );
+	p2 = opRep(p, 0.5);
 
-	float d =   sdBox(p1, vec3(0.2 + a * 3.0, 12.0 - a, 0.2 + a));
-	d = min(d,  sdBox(p1, vec3(0.4 - a, 13.0 - 4.0 * a, 0.1 + a)));
-	d = max(d, -sdBox(p1, vec3(0.3 - a, 14.0 - 4.0 * a, a)));
-	d = max(d, -sdBox(p2, vec3(0.05 + a)));
+	float d =   sdBox(p1, vec3(0.2 + a * 3.0, 12.0 - a,       0.2 + a));
+	d = min(d,  sdBox(p1, vec3(0.4 - a,       13.0 - 4.0 * a, 0.1 + a)));
+	d = max(d, -sdBox(p1, vec3(0.3 - a,       14.0 - 4.0 * a, a)));
+	d = max(d, -sdBox(p2, vec3(0.8 * a, 0.8 * a, 0.8 * a)));
 	return d;
 }
 
