--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -85,10 +85,8 @@ struct Ray {
 	vec3 direction;
 };
 
-#define METAL_MATERIAL 0
-#define CIRCUIT_MATERIAL 1
-#define MIRROR_MATERIAL  2
-#define SKY_MATERIAL 4
+#define METAL_MATERIAL   0
+#define MIRROR_MATERIAL  1
 
 
 // util
@@ -129,6 +127,7 @@ struct Intersection {
 
 	int material;
 	vec3 color;
+	float reflection;
 };
 
 
@@ -318,14 +317,14 @@ vec3 calcNormal( vec3 p ) {
 			e.yxy * dScene( p + e.yxy ) + e.xxx * dScene( p + e.xxx ) );
 }
 
-void setMaterialAndUv( inout Intersection intersection, vec3 p ) {
-	if ( abs( dUfo( p ) ) < EPS ) {
+void setMaterialAndUv(inout Intersection intersection, vec3 p) {
+	if ( time <= META_SCENE_END_TIME ) {
+		intersection.material = MIRROR_MATERIAL;
+	} else {
+		dUfo( p );
+		intersection.material = METAL_MATERIAL;
+		intersection.uv = p.xz;
 	}
-	else {
-	}
-
-	intersection.material = METAL_MATERIAL;
-	intersection.uv = p.xz;
 }
 
 void intersectScene( inout Intersection intersection, inout Ray ray ) {
@@ -394,7 +393,11 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			//float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
 			//float pattern = max( dg.x - 1.0, 0.0 );
 			//intersection.color = vec3(0.2) + 0.5 * diffuse * ao + 0.1 * specular;
-			intersection.color =  hsv2rgb(vec3(0.1 * intersection.count, 0.0, 0.7)) * diffuse * ao * shadow + 0.1 * specular;
+			intersection.color = hsv2rgb(vec3(0.1 * intersection.count, 0.0, 0.7)) * diffuse * ao * shadow + 0.1 * specular;
+			intersection.reflection = 0.7;
+		} else {
+			intersection.color = vec3(0.0);
+			intersection.reflection = 1.0;
 		}
 
 		intersection.color = mix(intersection.color, 0.8 * vec3(0.7, 0.75, 0.8), min(1.0, pow(0.02 * intersection.distance, 2.0)));
@@ -456,16 +459,16 @@ void main(void) {
 	illuminationColor = hsv2rgb( vec3( time * 0.02 + 0.6, 1.0, 1.0 ) );
 
 	vec3 color = vec3( 0.0 );
-	float alpha = 1.0;
+	float reflection = 1.0;
 	Intersection intersection;
 
 	for ( int bounce = 0; bounce <= 2; bounce++ ) {
 		calcRadiance( intersection, ray, bounce );
 
-		color += alpha * intersection.color;
-		if ( !intersection.hit || intersection.material != METAL_MATERIAL ) break;
+		color += reflection * intersection.color;
+		if ( !intersection.hit /* || intersection.material != METAL_MATERIAL*/ ) break;
 
-		alpha *= 0.7 * clamp(1.0 - 0.01 * intersection.distance, 0.0, 1.0);
+		reflection *= intersection.reflection;
 		ray.origin = intersection.position + intersection.normal * OFFSET;
 		ray.direction = normalize(reflect(ray.direction, intersection.normal));
 	}
@@ -525,7 +528,7 @@ void main(void) {
 
 				scene = new THREE.Scene();
 				camera = new THREE.PerspectiveCamera(35, 800/600);
-				camera.position.y = 5;
+				camera.position.z = 5;
 				camera.lookAt( new THREE.Vector3( 0.0, 0.0, 0.0 ) );
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
