--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -200,9 +200,9 @@ float dBar( vec2 p, float interval, float width) {
 }
 
 
-#define MIX_SCENE_END_TIME 8.0
-#define META_SCENE_END_TIME 20.0
-#define UFO_SCENE_END_TIME    30.0
+#define MIX_SCENE_END_TIME  16.0
+#define META_SCENE_END_TIME MIX_SCENE_END_TIME + 16.0
+#define UFO_SCENE_END_TIME  META_SCENE_END_TIME + 16.0
 
 float dMix(inout vec3 p) {
 	float sphere = dSphere(p, 1.5);
@@ -228,8 +228,9 @@ float gauss(float x) {
 
 float dWing(in vec3 p) {
 	float t = time - META_SCENE_END_TIME;
-	float a = 0.1 + 0.06 * (tempo + 1.0);
-	float b = min(0.1 * t, 10.0) * gauss(length(p.xz));
+	float l = length(p.xz);
+	float a = 0.1 + 0.06 * (1.0 + sin(PI * t + l));
+	float b = min(0.1 * t, 10.0) * gauss(l);
 	p.y += -b + 10.0;
 
 	vec3 p1 = p;
@@ -407,7 +408,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			//float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
 			//float pattern = max( dg.x - 1.0, 0.0 );
 			//intersection.color = vec3(0.2) + 0.5 * diffuse * ao + 0.1 * specular;
-			intersection.color = hsv2rgb(vec3(0.1 * intersection.count, 0.1, 0.5)) * diffuse * ao * shadow + 0.1 * specular;
+			intersection.color = hsv2rgb(vec3(0.1 * intersection.count, 0.3 + 0.3 * sin(time), 0.5)) * diffuse * ao * shadow + 0.1 * specular;
 			intersection.reflection = 0.7;
 		} else {
 			intersection.color = vec3(0.0);
