--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -524,6 +524,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
+			var offsetTime = 20.0;
 
 			var config = {
 				saveImage: function() {
@@ -635,7 +636,7 @@ void main(void) {
 
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
-				material.uniforms.time.value = timestamp * 0.001;
+				material.uniforms.time.value = offsetTime + timestamp * 0.001;
 				//material.uniforms.time.value = 147.81;
 				//material.uniforms.time.value = 62.68;
 				//material.uniforms.time.value = 93.69;
@@ -654,7 +655,7 @@ void main(void) {
 				document.getElementById( 'info' ).innerHTML = ""
 					+ pos.x + ", " + pos.y + ", " + pos.z + "<br />"
 					+ dir.x + ", " + dir.y + ", " + dir.z + "<br />"
-					+ timestamp * 0.001;
+					+ material.uniforms.time.value;
 
 			}
 
