--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -267,7 +267,7 @@ float dUfo(inout vec3 p) {
 float dScene( vec3 p ) {
 	if (time < META_SCENE_END_TIME + 20.0) {
 		float d = dMeta(p);
-		d = smoothMin(d, dUfo(p), clamp(time - META_SCENE_END_TIME, 1.0, 10.0));
+		d = smoothMin(d, dUfo(p), clamp((time - META_SCENE_END_TIME) * 3.0, 1.0, 10.0));
 		return d;
 	} else {
 		return dUfo(p);
@@ -443,20 +443,34 @@ mat3 lookat(in vec3 eye, in vec3 target) {
 
 void setupCamera() {
 	float t = 0.1 * time;
-	float x = clamp((time - META_SCENE_END_TIME - 1.0) * 0.2, 0.0, 1.0);
+
+	// blend
+	float b1 = clamp((time - META_SCENE_END_TIME) * 0.2, 0.0, 1.0);
+	float b2 = clamp((time - META_SCENE_END_TIME - 20.0) * 0.4, 0.0, 1.0);
+	float b3 = clamp((time - META_SCENE_END_TIME - 40.0) * 0.4, 0.0, 1.0);
 
 	target = vec3(0.0);
 	target.y = 0.7 * clamp(META_SCENE_END_TIME - time, -4.0, 40.0);
 
-	float r = 5.0;
+	// position
 	vec3 p1 = target + vec3(0.0, 0.0, -5.0);
-	vec3 p2 = vec3(1.0, min(8.0, 2.0 + 0.2 * (time - META_SCENE_END_TIME)), 1.0);
-	cPos = mix(p1, p2, x);
 
+	float a = 0.2 * (time - META_SCENE_END_TIME);
+	vec3 p2 = vec3(1.0 * pow(0.1, a), abs(8.0 * cos(0.1 * time)), 1.0 * pow(0.1, a));
+
+	vec3 p3 = vec3(5.0, 1.0, 0.0);
+	vec3 p4 = vec3(0.01, 5.0, 0.0);
+
+	cPos = mix(p1, p2, b1);
+	cPos = mix(cPos, p3, b2);
+	cPos = mix(cPos, p4, b3);
+
+	// direction
 	vec3 d1 = normalize(target - cPos);
 	vec3 d2 = vec3(-0.2, -1.0, -0.2);
 
-	cDir = mix(d1, d2, x);
+	cDir = mix(d1, d2, b1);
+	cDir = mix(cDir, d1, b2);
 }
 
 void main(void) {
