--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -200,8 +200,7 @@ float dBar( vec2 p, float interval, float width) {
 }
 
 
-#define MIX_SCENE_END_TIME  (16.0)
-#define META_SCENE_END_TIME (MIX_SCENE_END_TIME + 16.0)
+#define META_SCENE_END_TIME (32.0)
 #define UFO_SCENE_END_TIME  (META_SCENE_END_TIME + 16.0)
 
 float dMix(inout vec3 p) {
@@ -212,7 +211,7 @@ float dMix(inout vec3 p) {
 }
 
 float dMeta(inout vec3 p) {
-	float a = 1.0 + sin(time * 0.3);
+	float a = 1.0 + cos(time * 0.3);
 	float b = 0.2 * sin(time);
 	float d1 = dSphere(p - target - vec3(a, 0, b), 1.0);
 	float d2 = dSphere(p - target + vec3(a, 0, b), 1.0);
@@ -229,7 +228,7 @@ float dWing(in vec3 p) {
 	float t = time - META_SCENE_END_TIME;
 	float l = length(p.xz);
 	float a = 0.1 + 0.06 * (1.0 + sin(PI * t + l));
-	float b = min(0.1 * t, 10.0) * gauss(l);
+	float b = min(0.2 * t, 10.0) * gauss(l);
 	p.y += -b + 15.0;
 
 	vec3 p1 = p;
@@ -431,6 +430,8 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 
 		intersection.color = mix(intersection.color, vec3(0.7, 0.75, 0.8), pow(1.0 - max(rd, 0.0), 4.0));
 	}
+
+	intersection.color = mix(intersection.color, vec3(1.0), clamp(0.1 * (time - 120.0), 0.0, 1.0));
 }
 
 // gaz
@@ -442,15 +443,21 @@ mat3 lookat(in vec3 eye, in vec3 target) {
 }
 
 void setupCamera() {
-	float t = 0.1 * time;
+	// time
+	float t1 = time - META_SCENE_END_TIME;
+	float t2 = t1 - 30.0;
+	float t3 = t2 - 16.0;
+	float t4 = t3 - 30.0;
 
 	// blend
-	float b1 = clamp((time - META_SCENE_END_TIME) * 0.2, 0.0, 1.0);
-	float b2 = clamp((time - META_SCENE_END_TIME - 20.0) * 0.4, 0.0, 1.0);
-	float b3 = clamp((time - META_SCENE_END_TIME - 40.0) * 0.4, 0.0, 1.0);
+	float b1 = easeInOutCubic(clamp(t1 * 0.2, 0.0, 1.0));
+	float b2 = easeInOutCubic(clamp(t2 * 0.4, 0.0, 1.0));
+	float b3 = easeInOutCubic(clamp(t3 * 0.4, 0.0, 1.0));
+	float b4 = easeInOutCubic(clamp(t4 * 0.2, 0.0, 1.0));
 
 	target = vec3(0.0);
 	target.y = 0.7 * clamp(META_SCENE_END_TIME - time, -4.0, 40.0);
+	target.y = mix(target.y, 1.0, step(1.0, t2));
 
 	// position
 	vec3 p1 = target + vec3(0.0, 0.0, -5.0);
@@ -458,12 +465,14 @@ void setupCamera() {
 	float a = 0.2 * (time - META_SCENE_END_TIME);
 	vec3 p2 = vec3(1.0 * pow(0.1, a), abs(8.0 * cos(0.1 * time)), 1.0 * pow(0.1, a));
 
-	vec3 p3 = vec3(5.0, 1.0, 0.0);
-	vec3 p4 = vec3(0.01, 5.0, 0.0);
+	vec3 p3 = vec3(4.0, 1.0 + t2 * 0.4, 0.0);
+	vec3 p4 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
+	vec3 p5 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
 
 	cPos = mix(p1, p2, b1);
 	cPos = mix(cPos, p3, b2);
 	cPos = mix(cPos, p4, b3);
+	cPos = mix(cPos, p5, b4);
 
 	// direction
 	vec3 d1 = normalize(target - cPos);
