--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -203,6 +203,19 @@ float dBar( vec2 p, float interval, float width) {
 #define META_SCENE_END_TIME (32.0)
 #define UFO_SCENE_END_TIME  (META_SCENE_END_TIME + 16.0)
 
+float dFract(inout vec3 p) {
+	float radius = 1.0;
+	float radiusScale = 0.45 * abs(sin(0.3 * time));
+	float d = length(p) - radius;
+	for (int i = 0; i < 5; i++) {
+		vec3 q = abs(p) + normalize(vec3(-1.0)) * radius * (1.0 + radiusScale);
+		d = min(d, length(p) - radius);
+		p = q;
+		radius *= radiusScale;
+	}
+	return d;
+}
+
 float dMix(inout vec3 p) {
 	float sphere = dSphere(p, 1.5);
 	float box = sdBox(p, vec3(1.1));
@@ -268,8 +281,10 @@ float dScene( vec3 p ) {
 		float d = dMeta(p);
 		d = smin(d, dUfo(p), clamp((time - META_SCENE_END_TIME) * 3.0, 1.0, 10.0));
 		return d;
-	} else {
+	} else if (time <= 130.0) {
 		return dUfo(p);
+	} else {
+		return dFract(p);
 	}
 }
 
@@ -431,7 +446,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		intersection.color = mix(intersection.color, vec3(0.7, 0.75, 0.8), pow(1.0 - max(rd, 0.0), 4.0));
 	}
 
-	intersection.color = mix(intersection.color, vec3(1.0), clamp(0.1 * (time - 120.0), 0.0, 1.0));
+	//intersection.color = mix(intersection.color, vec3(1.0), clamp(0.1 * (time - 120.0), 0.0, 1.0));
 }
 
 // gaz
@@ -562,7 +577,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
-			var offsetTime = 0.0;
+			var offsetTime = 150.0;
 
 			var config = {
 				saveImage: function() {
