--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -216,6 +216,26 @@ float dFract(inout vec3 p) {
 	return d;
 }
 
+float dTree(vec3 p) {
+	float scale = 0.8;
+	vec3 size = vec3(0.1, 1.0, 0.1);
+	float d = sdBox(p, size);
+	for (int i = 0; i < 7; i++) {
+		vec3 q = p;
+		q.x = abs(q.x);
+		q.y -= size.y;
+		q.xy *= rotate(-0.5);
+		d = min(d, sdBox(p, size));
+		p = q;
+		size *= scale;
+	}
+	return d;
+}
+
+float dSnowCrystal(inout vec3 p) {
+	return dTree(p);
+}
+
 float dMix(inout vec3 p) {
 	float sphere = dSphere(p, 1.5);
 	float box = sdBox(p, vec3(1.1));
@@ -284,7 +304,8 @@ float dScene( vec3 p ) {
 	} else if (time <= 130.0) {
 		return dUfo(p);
 	} else {
-		return dFract(p);
+		//return dFract(p);
+		return dSnowCrystal(p);
 	}
 }
 
@@ -586,7 +607,7 @@ void main(void) {
 					window.open( canvas.toDataURL() );
 
 				},
-				camera: 'GLSL',
+				camera: 'Orbit',
 				resolution: '512',
 			};
 
