--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -217,14 +217,15 @@ float dFract(inout vec3 p) {
 }
 
 float dTree(vec3 p) {
-	float scale = 0.8;
-	vec3 size = vec3(0.1, 1.0, 0.1);
+	float scale = 0.6;
+	float s = mix(0.2, 0.0, clamp(p.y, 0.0, 1.0));
+	vec3 size = vec3(s, 1.0, s);
 	float d = sdBox(p, size);
 	for (int i = 0; i < 7; i++) {
 		vec3 q = p;
 		q.x = abs(q.x);
-		q.y -= size.y;
-		q.xy *= rotate(-0.5);
+		q.y -= 0.5 * size.y;
+		q.xy *= rotate(-1.2);
 		d = min(d, sdBox(p, size));
 		p = q;
 		size *= scale;
@@ -233,6 +234,7 @@ float dTree(vec3 p) {
 }
 
 float dSnowCrystal(inout vec3 p) {
+	p.xy = fold(p.xy, 6.0);
 	return dTree(p);
 }
 
