--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -201,7 +201,7 @@ float dBar( vec2 p, float interval, float width) {
 
 
 #define META_SCENE_END_TIME (32.0)
-#define UFO_SCENE_END_TIME  (META_SCENE_END_TIME + 16.0)
+#define UFO_SCENE_END_TIME (120.0)
 
 float dFract(inout vec3 p) {
 	float radius = 1.0;
@@ -217,11 +217,11 @@ float dFract(inout vec3 p) {
 }
 
 float dTree(vec3 p) {
-	float scale = 0.6;
-	float s = mix(0.2, 0.0, clamp(p.y, 0.0, 1.0));
-	vec3 size = vec3(s, 1.0, s);
+	float scale = 0.6 * clamp(2.0 * sin(0.05 * (time - UFO_SCENE_END_TIME)), 0.0, 1.0);
+	float width = mix(0.3 * scale, 0.0, clamp(p.y, 0.0, 1.0));
+	vec3 size = vec3(width, 1.0, width);
 	float d = sdBox(p, size);
-	for (int i = 0; i < 7; i++) {
+	for (int i = 0; i < 10; i++) {
 		vec3 q = p;
 		q.x = abs(q.x);
 		q.y -= 0.5 * size.y;
@@ -303,7 +303,7 @@ float dScene( vec3 p ) {
 		float d = dMeta(p);
 		d = smin(d, dUfo(p), clamp((time - META_SCENE_END_TIME) * 3.0, 1.0, 10.0));
 		return d;
-	} else if (time <= 130.0) {
+	} else if (time <= UFO_SCENE_END_TIME) {
 		return dUfo(p);
 	} else {
 		//return dFract(p);
@@ -469,7 +469,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		intersection.color = mix(intersection.color, vec3(0.7, 0.75, 0.8), pow(1.0 - max(rd, 0.0), 4.0));
 	}
 
-	//intersection.color = mix(intersection.color, vec3(1.0), clamp(0.1 * (time - 120.0), 0.0, 1.0));
+	intersection.color = mix(intersection.color, vec3(1.0), gauss((time - UFO_SCENE_END_TIME) * 5.0));
 }
 
 // gaz
@@ -486,16 +486,19 @@ void setupCamera() {
 	float t2 = t1 - 30.0;
 	float t3 = t2 - 16.0;
 	float t4 = t3 - 30.0;
+	float t5 = time - UFO_SCENE_END_TIME;
 
 	// blend
 	float b1 = easeInOutCubic(clamp(t1 * 0.2, 0.0, 1.0));
 	float b2 = easeInOutCubic(clamp(t2 * 0.4, 0.0, 1.0));
 	float b3 = easeInOutCubic(clamp(t3 * 0.4, 0.0, 1.0));
 	float b4 = easeInOutCubic(clamp(t4 * 0.2, 0.0, 1.0));
+	float b5 = step(1.0, t5);
 
 	target = vec3(0.0);
 	target.y = 0.7 * clamp(META_SCENE_END_TIME - time, -4.0, 40.0);
 	target.y = mix(target.y, 1.0, step(1.0, t2));
+	target.y = mix(target.y, 0.0, b5);
 
 	// position
 	vec3 p1 = target + vec3(0.0, 0.0, -5.0);
@@ -506,11 +509,13 @@ void setupCamera() {
 	vec3 p3 = vec3(4.0, 1.0 + t2 * 0.4, 0.0);
 	vec3 p4 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
 	vec3 p5 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
+	vec3 p6 = vec3(2.0 * cos(0.5 + t5 * 0.1), 0.1, 2.0 * sin(0.5 + t5 * 0.1));
 
 	cPos = mix(p1, p2, b1);
 	cPos = mix(cPos, p3, b2);
 	cPos = mix(cPos, p4, b3);
 	cPos = mix(cPos, p5, b4);
+	cPos = mix(cPos, p6, b5);
 
 	// direction
 	vec3 d1 = normalize(target - cPos);
@@ -600,7 +605,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
-			var offsetTime = 150.0;
+			var offsetTime = 120.0;
 
 			var config = {
 				saveImage: function() {
@@ -609,7 +614,7 @@ void main(void) {
 					window.open( canvas.toDataURL() );
 
 				},
-				camera: 'Orbit',
+				camera: 'GLSL',
 				resolution: '512',
 			};
 
