--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -202,6 +202,7 @@ float dBar( vec2 p, float interval, float width) {
 
 #define META_SCENE_END_TIME (32.0)
 #define UFO_SCENE_END_TIME (120.0)
+#define SNOW_SCENE_END_TIME (170.0)
 
 float dFract(inout vec3 p) {
 	float radius = 1.0;
@@ -217,7 +218,7 @@ float dFract(inout vec3 p) {
 }
 
 float dTree(vec3 p) {
-	float scale = 0.6 * clamp(2.0 * sin(0.05 * (time - UFO_SCENE_END_TIME)), 0.0, 1.0);
+	float scale = 0.6 * clamp(1.5 * sin(0.05 * (time - UFO_SCENE_END_TIME)), 0.0, 1.0);
 	float width = mix(0.3 * scale, 0.0, clamp(p.y, 0.0, 1.0));
 	vec3 size = vec3(width, 1.0, width);
 	float d = sdBox(p, size);
@@ -470,6 +471,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 	}
 
 	intersection.color = mix(intersection.color, vec3(1.0), gauss((time - UFO_SCENE_END_TIME) * 5.0));
+	intersection.color = mix(intersection.color, vec3(1.0), gauss((time - SNOW_SCENE_END_TIME) * 3.0));
 }
 
 // gaz
@@ -509,7 +511,7 @@ void setupCamera() {
 	vec3 p3 = vec3(4.0, 1.0 + t2 * 0.4, 0.0);
 	vec3 p4 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
 	vec3 p5 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
-	vec3 p6 = vec3(2.0 * cos(0.5 + t5 * 0.1), 0.1, 2.0 * sin(0.5 + t5 * 0.1));
+	vec3 p6 = vec3(2.0 * cos(0.5 + t5 * 0.1), 0.1, (0.5 + t5 * 0.05) * sin(0.5 + t5 * 0.1));
 
 	cPos = mix(p1, p2, b1);
 	cPos = mix(cPos, p3, b2);
