--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -497,8 +497,8 @@ void setupCamera() {
 
 	target = vec3(0.0);
 	target.y = 0.7 * clamp(META_SCENE_END_TIME - lTime, -4.0, 40.0);
-	target.y = mix(target.y, 1.0, step(1.0, t2));
-	target.y = mix(target.y, 0.0, b5);
+	target.y = mix(target.y, 1.0 + t2 * 0.3, b2);
+	target.y = mix(target.y, 0.0, b3);
 
 	// position
 	vec3 p1 = target + vec3(0.0, 0.0, -5.0);
@@ -506,7 +506,7 @@ void setupCamera() {
 	float a = 0.2 * (lTime - META_SCENE_END_TIME);
 	vec3 p2 = vec3(1.0 * pow(0.1, a), abs(8.0 * cos(0.1 * lTime)), 1.0 * pow(0.1, a));
 
-	vec3 p3 = vec3(4.0, 1.0 + t2 * 0.4, 0.0);
+	vec3 p3 = vec3(3.5 + t2 * 0.8, 1.0 + t2 * 0.1, 0.0);
 	vec3 p4 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
 	vec3 p5 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
 	vec3 p6 = vec3(2.0 * cos(0.5 + t5 * 0.1), 0.1, (0.5 + t5 * 0.05) * sin(0.5 + t5 * 0.1));
@@ -523,6 +523,7 @@ void setupCamera() {
 
 	cDir = mix(d1, d2, b1);
 	cDir = mix(cDir, d1, b2);
+	cDir = mix(cDir, d1, b3);
 }
 
 void main(void) {
@@ -604,7 +605,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
-			var offsetTime = 120.0;
+			var offsetTime = 0.0;
 
 			var config = {
 				saveImage: function() {
