--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -501,29 +501,28 @@ void setupCamera() {
 	target.y = mix(target.y, 0.0, b3);
 
 	// position
-	vec3 p1 = target + vec3(0.0, 0.0, -5.0);
+	vec3 p0 = target + vec3(0.0, 0.0, -5.0);
 
 	float a = 0.2 * (lTime - META_SCENE_END_TIME);
-	vec3 p2 = vec3(1.0 * pow(0.1, a), abs(8.0 * cos(0.1 * lTime)), 1.0 * pow(0.1, a));
+	vec3 p1 = vec3(1.0 * pow(0.1, a), abs(8.0 * cos(0.1 * lTime)), 1.0 * pow(0.1, a));
 
-	vec3 p3 = vec3(3.5 + t2 * 0.8, 1.0 + t2 * 0.1, 0.0);
-	vec3 p4 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
-	vec3 p5 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
-	vec3 p6 = vec3(2.0 * cos(0.5 + t5 * 0.1), 0.1, (0.5 + t5 * 0.05) * sin(0.5 + t5 * 0.1));
+	vec3 p2 = vec3(3.5 + t2 * 0.8, 1.0 + t2 * 0.1, 0.0);
+	vec3 p3 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
+	vec3 p4 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
+	vec3 p5 = vec3(2.0 * cos(0.5 + t5 * 0.1), 0.1, (0.5 + t5 * 0.05) * sin(0.5 + t5 * 0.1));
 
-	cPos = mix(p1, p2, b1);
-	cPos = mix(cPos, p3, b2);
-	cPos = mix(cPos, p4, b3);
-	cPos = mix(cPos, p5, b4);
-	cPos = mix(cPos, p6, b5);
+	cPos = mix(p0, p1, b1);
+	cPos = mix(cPos, p2, b2);
+	cPos = mix(cPos, p3, b3);
+	cPos = mix(cPos, p4, b4);
+	cPos = mix(cPos, p5, b5);
 
 	// direction
-	vec3 d1 = normalize(target - cPos);
-	vec3 d2 = vec3(-0.2, -1.0, -0.2);
+	vec3 look = normalize(target - cPos);
+	vec3 down = vec3(-0.2, -1.0, -0.2);
 
-	cDir = mix(d1, d2, b1);
-	cDir = mix(cDir, d1, b2);
-	cDir = mix(cDir, d1, b3);
+	cDir = mix(look, down, b1);
+	cDir = mix(cDir, look, b2);
 }
 
 void main(void) {
