--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -520,9 +520,7 @@ void cameraControl(inout Camera camera) {
 
 	// position
 	vec3 p0 = target + vec3(0.0, 0.0, -5.0);
-	//vec3 p1 = vec3(0.1, 10.5, -0.1);
-	float a = 0.1 * (lTime - META_SCENE_END_TIME);
-	vec3 p1 = vec3(1.0 * pow(0.1, a), abs(8.0 * cos(0.1 * lTime)), 1.0 * pow(0.1, a));
+	vec3 p1 = vec3(1.0, 0.3 * abs(t1 - 2.5) - 1.0, 1.0);
 	vec3 p2 = vec3(3.5 + t2 * 0.8, 1.0 + t2 * 0.1, 0.0);
 	vec3 p3 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
 	vec3 p4 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
@@ -538,14 +536,8 @@ void cameraControl(inout Camera camera) {
 	camera.eye = mix(camera.eye, p5, b5);
 	camera.eye = mix(camera.eye, p6, b6);
 
-
 	// direction
-	vec3 look = normalize(target - camera.eye);
-	vec3 down = vec3(-0.2, -1.0, -0.2);
-
-	camera.forward = mix(look, down, b1);
-	camera.forward = mix(camera.forward, look, b2);
-	//camera.forward = look;
+	camera.forward = normalize(target - camera.eye);
 }
 
 void main(void) {
