--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -279,11 +279,26 @@ float gauss(float x) {
 	return exp(-x * x / a);
 }
 
+float hWave(vec2 p, float t) {
+	float h = 1.0;
+	float a = 1.0;
+	float b = 3.0;
+
+	for(float i = 0.0; i < 3.0; i++) {
+		float f = pow( 2.0, i );
+		h += 1.0 / f * (sin( f * a * p.x + b * t) + sin(f * a * p.y + b * t));
+	}
+
+	return h;
+}
+
 float dWing(in vec3 p) {
 	float t = lTime - META_SCENE_END_TIME;
 	float l = length(p.xz);
+	float fusion = gauss((lTime - META_SCENE_END_TIME - 5.0) * 2.0);
+
 	float a = 0.1 + 0.06 * (1.0 + sin(PI * t + l));
-	float b = min(0.2 * t, 10.0) * gauss(l);
+	float b = min(0.2 * t, 10.0) * gauss(l) + 0.2 * fusion * hWave(p.xz, t);
 	p.y += -b + 15.0;
 
 	vec3 p1 = p;
@@ -496,7 +511,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 void cameraControl(inout Camera camera) {
 	// time
 	float t1 = lTime - META_SCENE_END_TIME;
-	float t2 = t1 - 30.0;
+	float t2 = t1 - 25.0;
 	float t3 = t2 - 16.0;
 	float t4 = t3 - 30.0;
 
@@ -519,7 +534,7 @@ void cameraControl(inout Camera camera) {
 
 	// position
 	vec3 p0 = camera.target + vec3(0.0, 0.0, -5.0);
-	vec3 p1 = vec3(1.0, 0.3 * abs(t1 - 2.5) - 1.0, 1.0);
+	vec3 p1 = vec3(1.0, 0.3 * abs(t1 - 0.5), 1.0);
 	vec3 p2 = vec3(3.5 + t2 * 0.8, 1.0 + t2 * 0.1, 0.0);
 	vec3 p3 = vec3(0.01, 4.0 + t3 * 0.2, 0.0);
 	vec3 p4 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
