--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -266,7 +266,7 @@ float dMix(inout vec3 p) {
 }
 
 float dMeta(inout vec3 p) {
-	float a = 1.0 + cos(lTime * 0.3);
+	float a = max(0.0, 2.0 - lTime * 0.1) + cos(lTime * 0.3);
 	float b = 0.2 * sin(lTime);
 	float d1 = dSphere(p - camera.target - vec3(a, 0, b), 1.0);
 	float d2 = dSphere(p - camera.target + vec3(a, 0, b), 1.0);
@@ -655,7 +655,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
-			var offsetTime = 120.0;
+			var offsetTime = 0.0;
 
 			var config = {
 				saveImage: function() {
