--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -237,7 +237,7 @@ float dFract(inout vec3 p) {
 }
 
 float dTree(vec3 p) {
-	float scale = 0.6 * clamp(1.5 * sin(0.05 * (lTime - UFO_SCENE_END_TIME)), 0.0, 1.0);
+	float scale = 0.6 * clamp(1.5 * sin(0.05 * (lTime - UFO_SCENE_END_TIME - 5.0)), 0.0, 1.0);
 	float width = mix(0.3 * scale, 0.0, clamp(p.y, 0.0, 1.0));
 	vec3 size = vec3(width, 1.0, width);
 	float d = sdBox(p, size);
@@ -548,7 +548,8 @@ void cameraControl(inout Camera camera) {
 	float t4 = t3 - 30.0;
 
 	float t5 = lTime - UFO_SCENE_END_TIME;
-	float t6 = t5 - 20.0;
+	float t6 = t5 - 6.0;
+	float t7 = t6 - 12.0;
 
 	// blend
 	float b1 = easeInOutCubic(clamp(t1 * 0.2, 0.0, 1.0));
@@ -556,13 +557,16 @@ void cameraControl(inout Camera camera) {
 	float b3 = easeInOutCubic(clamp(t3 * 0.4, 0.0, 1.0));
 	float b4 = easeInOutCubic(clamp(t4 * 0.2, 0.0, 1.0));
 
-	float b5 = step(1.0, t5);
-	float b6 = easeInOutCubic(clamp(t6, 0.0, 1.0));
+	float b5 = easeInOutCubic(clamp(t5, 0.0, 1.0));
+	float b6 = easeInOutCubic(clamp(t6 - 3.0, 0.0, 1.0));
+	float b7 = easeInOutCubic(clamp(t7, 0.0, 1.0));
 
 	camera.target = vec3(0.0);
 	camera.target.y = 0.7 * clamp(META_SCENE_END_TIME - lTime, -4.0, 40.0);
 	camera.target.y = mix(camera.target.y, 1.0 + t2 * 0.3, b2);
 	camera.target.y = mix(camera.target.y, 0.0, b3);
+	camera.target.x = mix(camera.target.x, -0.7, b6);
+	camera.target.x = mix(camera.target.x, 0.0, b7);
 
 	// position
 	vec3 p0 = camera.target + vec3(0.0, 0.0, -5.0);
@@ -572,8 +576,9 @@ void cameraControl(inout Camera camera) {
 	vec3 p4 = vec3(1.5, 10.0 + t4 * 0.1, 1.0);
 
 	float v = 0.5 + t5 * 0.1;
-	vec3 p5 = vec3(2.0 * cos(v), 0.1, (0.5 + t5 * 0.01) * sin(v));
-	vec3 p6 = vec3(0.0, 0.0, 0.5 + t6 * 0.1);
+	vec3 p5 = vec3(0.0, 0.1, 5.0 - t5 * 0.1);
+	vec3 p6 = vec3(2.0 * cos(v), 0.1, (0.5 + t6 * 0.01) * sin(v));
+	vec3 p7 = vec3(0.0, 0.0, 0.5 + t7 * 0.1);
 
 	camera.eye = mix(p0,         p1, b1);
 	camera.eye = mix(camera.eye, p2, b2);
@@ -581,6 +586,7 @@ void cameraControl(inout Camera camera) {
 	camera.eye = mix(camera.eye, p4, b4);
 	camera.eye = mix(camera.eye, p5, b5);
 	camera.eye = mix(camera.eye, p6, b6);
+	camera.eye = mix(camera.eye, p7, b7);
 
 	// direction
 	camera.forward = normalize(camera.target - camera.eye);
@@ -655,7 +661,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
-			var offsetTime = 0.0;
+			var offsetTime = 115.0;
 
 			var config = {
 				saveImage: function() {
